--- a/css/styles.css
+++ b/css/styles.css
@@ -210,6 +210,11 @@ section{
 }
 
 @media(max-width: 1770px){
+    :root{
+        --big-font: 6rem;
+        --p-font: 17px;
+    }
+
     header{
         padding: 22px 4%;
     }
@@ -220,6 +225,7 @@ section{
         right: 4%;
     }
 }
+
 
 @media(max-width: 1670px){
     :root{
@@ -329,3 +335,16 @@ section{
         margin: 0 auto;
     }
 }
+
+.footer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 80px;
+}
+
+.footer p{
+    font-size: 14px;
+}
+/* Fin Estilos /
